--- a/less/_mediaidx.disp.less
+++ b/less/_mediaidx.disp.less
@@ -2,3 +2,12 @@
 // Disp mediaidx module
 // ****************************************************************************
 
+.disp_mediaidx {
+	.mediaidx-item--wrapper {
+		text-align: center;
+		.mediaidx-item {
+			display: inline-block;
+			margin: 22px;
+		}
+	}
+}
