--- a/less/_responsive.module.less
+++ b/less/_responsive.module.less
@@ -34,22 +34,26 @@
 	}
 	
 	// Masonry responsive layout
-	.disp_posts .grid .grid-item {
-		&.two-cols {
-			width: 50%;
+	.disp_posts, .disp_mediaidx {
+		.grid .grid-item {
+			&.two-cols {
+				width: 50%;
+			}
 		}
-	}
-	.disp_posts .grid .grid-item {
-		&.three-cols {
-			width: 50%;
+		.disp_posts .grid .grid-item {
+			&.three-cols {
+				width: 50%;
+			}
 		}
 	}
 }
 
 @media (min-width: 1200px) {
-	.disp_posts .grid .grid-item {
-		&.three-cols {
-			width: 33.333%;
+	.disp_posts {
+		.grid .grid-item {
+			&.three-cols {
+				width: 33.333%;
+			}
 		}
 	}
 }
@@ -84,38 +88,15 @@
 			}
 		}
 	}
+	
+	// Mediaidx foreach image wrapper
+	.disp_mediaidx .mediaidx-item--wrapper .mediaidx-item {
+		margin: 10px 0px;
+		display: block;
+	}
 }
 
 @media (max-width: 992px) {
-	.navbar-nav.evo_container__menu .ufld_icon_links {
-		width: 54px;
-		&:before {
-			font-family: FontAwesome;
-			display: inline-block;
-			content: '\f1e0';
-			font-size: 18px;
-			height: 54px;
-			width: 54px !important;
-			line-height: 54px;
-			
-				.transition-0.1s;
-				-webkit-transition-timing-function: ease-in-out;
-				transition-timing-function: ease-in-out;
-		}
-		&:hover:before {
-			cursor: pointer;
-			color: #fff;
-		}
-		a {
-			display: none;
-			&.drop-down-social {
-				display: block;
-				width: 55px;
-			}
-			z-index: 1009;
-		}
-	}
-	
 	.evo_container__sidebar, .evo_container__sidebar2 {
 		margin-top: 80px;
 		.widget_plugin_evo_Calr table {
@@ -123,4 +104,47 @@
 			margin: 0 auto;
 		}
 	}
+	
+	.evo_panel__login .skin-form .panel-heading h3 {
+		font-size: 18px;
+	}
+}
+
+@media (max-width:1199px) {
+	.navbar-header {
+		.ufld_icon_links {
+			width: 54px;
+			&:before {
+				font-family: FontAwesome;
+				display: inline-block;
+				content: '\f1e0';
+				font-size: 18px;
+				height: 54px;
+				width: 54px !important;
+				line-height: 54px;
+				
+					.transition-0.1s;
+					-webkit-transition-timing-function: ease-in-out;
+					transition-timing-function: ease-in-out;
+			}
+			&:hover:before {
+				cursor: pointer;
+				color: #fff;
+			}
+			a {
+				display: none;
+				&.drop-down-social {
+					display: block;
+					width: 55px;
+				}
+				z-index: 1009;
+			}
+		}
+	}
+
+	/*.navbar-header {
+		.header-social-toggle {
+			display: block;
+		}
+	}*/
 }
