--- a/less/_responsive.module.less
+++ b/less/_responsive.module.less
@@ -141,10 +141,7 @@
 			}
 		}
 	}
-
-	/*.navbar-header {
-		.header-social-toggle {
-			display: block;
-		}
-	}*/
+	.evo_post_title h2 {
+		font-size: 26px;
+	}
 }
