--- a/style.css
+++ b/style.css
@@ -55,9 +55,6 @@ div.control input:focus {
 .navbar .navbar-collapse {
   padding: 0;
 }
-.navbar-nav.evo_container__menu {
-  width: 100%;
-}
 .navbar-nav.evo_container__menu li {
   margin-top: 17px;
   list-style-type: none;
@@ -72,6 +69,26 @@ div.control input:focus {
 }
 .navbar-nav.evo_container__menu li.active a.selected {
   text-decoration: underline;
+}
+.navbar-nav.evo_container__menu .navbar-brand,
+.navbar-header .navbar-brand {
+  height: 0;
+  padding: 0;
+  float: none !important;
+}
+.navbar-nav.evo_container__menu .navbar-brand h3,
+.navbar-header .navbar-brand h3 {
+  margin: 10px 0 0 15px;
+}
+.navbar-nav.evo_container__menu .navbar-brand h3 a,
+.navbar-header .navbar-brand h3 a {
+  border: 0 !important;
+  margin: 0 15px 0 0 !important;
+  letter-spacing: -0.15px;
+  font-size: 14px;
+  padding: 20px 0;
+  text-transform: uppercase;
+  font-weight: 900;
 }
 .navbar-nav.evo_container__menu .navbar-toggle-hamb,
 .navbar-header .navbar-toggle-hamb {
@@ -131,7 +148,8 @@ div.control input:focus {
   color: #fff;
 }
 .header-search-toggle {
-  float: right;
+  position: absolute;
+  right: 0;
   padding: 0;
   margin: 0;
 }
@@ -676,9 +694,10 @@ textarea.message_text {
   letter-spacing: 0.6px;
 }
 .comment-form .form-control {
-  padding: 20px 15px;
+  padding: 12px 15px;
   border-radius: 2px;
   box-shadow: none;
+  height: auto;
 }
 .comment-form #submit_preview_buttons_wrapper {
   clear: both;
@@ -1475,9 +1494,7 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
     display: block;
     width: 55px;
   }
-  /*.navbar-header {
-		.header-social-toggle {
-			display: block;
-		}
-	}*/
+  .evo_post_title h2 {
+    font-size: 26px;
+  }
 }
