--- a/less/_responsive.module.less
+++ b/less/_responsive.module.less
@@ -74,6 +74,19 @@
 	}
 }
 
+@media (max-width: 615px) {
+	.disp_mediaidx {
+		.mediaidx-item--wrapper {
+			.mediaidx-item {
+				img {
+					width: 100%;
+					height: auto;
+				}
+			}
+		}
+	}
+}
+
 @media (max-width: 768px) {
 	// Video link layout
 	.evo_post, .evo_intro_post, .evo_featured_post {
@@ -94,6 +107,17 @@
 		margin: 10px 0px;
 		display: block;
 	}
+	
+
+	// When logged out on msgform disp
+	.disp_msgform.anonymous {
+		.form-group {
+			width: 100%;
+		}
+		.controls input {
+			display: block;
+		}
+	}
 }
 
 @media (max-width: 992px) {
@@ -111,36 +135,6 @@
 }
 
 @media (max-width:1199px) {
-	.navbar-header {
-		.ufld_icon_links {
-			width: 54px;
-			&:before {
-				font-family: FontAwesome;
-				display: inline-block;
-				content: '\f1e0';
-				font-size: 18px;
-				height: 54px;
-				width: 54px !important;
-				line-height: 54px;
-				
-					.transition-0.1s;
-					-webkit-transition-timing-function: ease-in-out;
-					transition-timing-function: ease-in-out;
-			}
-			&:hover:before {
-				cursor: pointer;
-				color: #fff;
-			}
-			a {
-				display: none;
-				&.drop-down-social {
-					display: block;
-					width: 55px;
-				}
-				z-index: 1009;
-			}
-		}
-	}
 	.evo_post_title h2 {
 		font-size: 26px;
 	}
