--- a/style.css
+++ b/style.css
@@ -51,9 +51,11 @@ div.control input:focus {
   min-height: 55px;
   margin-bottom: 0px;
   border-top: none !important;
+  border-radius: 0;
 }
 .navbar .navbar-collapse {
   padding: 0;
+  overflow: hidden;
 }
 .navbar-nav.evo_container__menu li {
   margin-top: 17px;
@@ -85,6 +87,7 @@ div.control input:focus {
   border: 0 !important;
   margin: 0 15px 0 0 !important;
   letter-spacing: -0.15px;
+  line-height: 35px;
   font-size: 14px;
   padding: 20px 0;
   text-transform: uppercase;
@@ -92,7 +95,7 @@ div.control input:focus {
 }
 .navbar-nav.evo_container__menu .navbar-toggle-hamb,
 .navbar-header .navbar-toggle-hamb {
-  padding: 21px 16px;
+  padding: 20px 16px;
   margin: 0;
   border-top: 0;
   border-right: 0;
@@ -147,11 +150,47 @@ div.control input:focus {
   background-color: #333333 !important;
   color: #fff;
 }
+.navbar-header .ufld_icon_links,
+.evo_container__menu .ufld_icon_links {
+  width: 54px;
+}
+.navbar-header .ufld_icon_links:before,
+.evo_container__menu .ufld_icon_links:before {
+  font-family: FontAwesome;
+  display: inline-block;
+  content: '\f1e0';
+  font-size: 18px;
+  height: 54px;
+  width: 54px !important;
+  line-height: 54px;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+}
+.navbar-header .ufld_icon_links:hover:before,
+.evo_container__menu .ufld_icon_links:hover:before {
+  cursor: pointer;
+  color: #fff;
+}
+.navbar-header .ufld_icon_links a,
+.evo_container__menu .ufld_icon_links a {
+  display: none;
+  z-index: 1009;
+}
+.navbar-header .ufld_icon_links a.drop-down-social,
+.evo_container__menu .ufld_icon_links a.drop-down-social {
+  display: block;
+  width: 55px;
+}
 .header-search-toggle {
   position: absolute;
   right: 0;
   padding: 0;
   margin: 0;
+  border-radius: 0;
+  border-top: 0;
+  border-bottom: 0;
 }
 .header-search-toggle i {
   padding: 20px;
@@ -170,6 +209,16 @@ div.control input:focus {
 .header-social-toggle {
   padding: 0;
   margin: 0;
+  border-radius: 0;
+  border-top: none;
+  border-right: none;
+  border-bottom: 0;
+}
+.header-social-toggle .ufld_icon_links a:first-child {
+  margin-top: 1px;
+}
+.menu-social-toggle .ufld_icon_links a:first-child {
+  margin-top: 1px;
 }
 .header-main-search-field {
   display: none;
@@ -180,7 +229,7 @@ div.control input:focus {
   -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
 }
-.header-main-search-field .search_field {
+.header-main-search-field div.compact_search_form input.search_field {
   height: 100%;
   font-size: 46px;
   text-align: center;
@@ -189,16 +238,16 @@ div.control input:focus {
   /* firefox 19+ */
   /* ie */
 }
-.header-main-search-field .search_field::-webkit-input-placeholder {
+.header-main-search-field div.compact_search_form input.search_field::-webkit-input-placeholder {
   color: #eee;
 }
-.header-main-search-field .search_field::-moz-placeholder {
+.header-main-search-field div.compact_search_form input.search_field::-moz-placeholder {
   color: #eee;
 }
-.header-main-search-field .search_field:-ms-input-placeholder {
+.header-main-search-field div.compact_search_form input.search_field:-ms-input-placeholder {
   color: #eee;
 }
-.header-main-search-field .search_field input:-moz-placeholder {
+.header-main-search-field div.compact_search_form input.search_field input:-moz-placeholder {
   color: #eee;
 }
 .front-page-extra-section {
@@ -575,29 +624,36 @@ textarea.message_text {
 .evo_cover_image .evo_content_block .evo_intro_post .btn-group a {
   float: none;
 }
-.disp_posts .grid-item.two-cols,
-.disp_posts .grid-item.three-cols {
+.disp_posts .grid {
+  margin-bottom: 4em;
+}
+.disp_posts .grid .grid-item.two-cols,
+.disp_posts .grid .grid-item.three-cols {
   padding: 0 15px;
 }
-.disp_posts .grid-item.two-cols article,
-.disp_posts .grid-item.three-cols article {
-  margin-bottom: 15px;
+.disp_posts .grid .grid-item.two-cols article,
+.disp_posts .grid .grid-item.three-cols article {
+  margin-bottom: 45px;
 }
-.disp_posts .grid-item.two-cols article .evo_post_masonry h2 a,
-.disp_posts .grid-item.three-cols article .evo_post_masonry h2 a {
+.disp_posts .grid .grid-item.two-cols article .evo_post_masonry h2,
+.disp_posts .grid .grid-item.three-cols article .evo_post_masonry h2 {
+  margin-top: 5px;
+}
+.disp_posts .grid .grid-item.two-cols article .evo_post_masonry h2 a,
+.disp_posts .grid .grid-item.three-cols article .evo_post_masonry h2 a {
   font-size: 20px;
   font-weight: 700;
 }
-.disp_posts .grid-item.two-cols article .evo_post__info,
-.disp_posts .grid-item.three-cols article .evo_post__info {
+.disp_posts .grid .grid-item.two-cols article .evo_post__info,
+.disp_posts .grid .grid-item.three-cols article .evo_post__info {
   padding-bottom: 15px;
 }
-.disp_posts .grid-item.two-cols article .evo_image_block,
-.disp_posts .grid-item.three-cols article .evo_image_block {
+.disp_posts .grid .grid-item.two-cols article .evo_image_block,
+.disp_posts .grid .grid-item.three-cols article .evo_image_block {
   margin-bottom: 15px;
 }
-.disp_posts .grid-item.two-cols article .evo_post__full_text,
-.disp_posts .grid-item.three-cols article .evo_post__full_text {
+.disp_posts .grid .grid-item.two-cols article .evo_post__full_text,
+.disp_posts .grid .grid-item.three-cols article .evo_post__full_text {
   font-size: 15px;
   letter-spacing: 0.2px;
 }
@@ -635,6 +691,7 @@ textarea.message_text {
 }
 .evo_comment {
   margin-left: 59px;
+  background: transparent;
 }
 .evo_comment .evo_comment_title {
   padding: 15px 15px 0px;
@@ -940,8 +997,8 @@ div.bSideItem h4 {
   border-radius: 4px;
   font-size: 13px;
   padding: 10px 16px;
-  margin-right: 5px;
-  margin-bottom: 5px;
+  margin-right: 4px;
+  margin-bottom: 4px;
 }
 div.action_messages,
 div.log_container {
@@ -1086,12 +1143,6 @@ main .widget_plugin_evo_Arch ul li span.dimmed:before {
 .widget_core_coll_category_list ul li a:hover {
   text-decoration: none;
 }
-div.widget_core_coll_avatar {
-  text-align: left;
-}
-div.widget_core_coll_avatar img {
-  border-radius: 50%;
-}
 .widget_plugin_evo_Calr .bCalendarTable caption {
   font-size: 14px;
 }
@@ -1140,6 +1191,14 @@ div.widget_core_coll_avatar img {
 .evo_container__sidebar2 .widget_plugin_evo_Calr table {
   width: 100%;
 }
+.evo_container__sidebar div.widget_core_coll_avatar,
+.evo_container__sidebar2 div.widget_core_coll_avatar {
+  text-align: left;
+}
+.evo_container__sidebar div.widget_core_coll_avatar img,
+.evo_container__sidebar2 div.widget_core_coll_avatar img {
+  border-radius: 50%;
+}
 p.tag_cloud a {
   font-size: 14px !important;
   margin: 0 1px 6px 0;
@@ -1158,6 +1217,64 @@ p.tag_cloud a {
 }
 p.tag_cloud a:hover {
   text-decoration: none;
+}
+.widget_core_user_avatars .widget_flow_blocks img {
+  border-radius: 0;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a,
+.disp_front main .widget_core_org_members .ufld_icon_links a {
+  border-radius: 0;
+  color: #fff;
+  height: 50px;
+  width: 50px;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a:hover,
+.disp_front main .widget_core_org_members .ufld_icon_links a:hover {
+  border-radius: 0;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a span,
+.disp_front main .widget_core_org_members .ufld_icon_links a span {
+  line-height: 50px;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a.ufld_twitter:hover,
+.disp_front main .widget_core_org_members .ufld_icon_links a.ufld_twitter:hover {
+  background-color: #00aced !important;
+  color: #fff;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a.ufld_facebook:hover,
+.disp_front main .widget_core_org_members .ufld_icon_links a.ufld_facebook:hover {
+  background-color: #3b5998 !important;
+  color: #fff;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a.ufld_googleplus:hover,
+.disp_front main .widget_core_org_members .ufld_icon_links a.ufld_googleplus:hover {
+  background-color: #dd4b39 !important;
+  color: #fff;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a.ufld_linkedin:hover,
+.disp_front main .widget_core_org_members .ufld_icon_links a.ufld_linkedin:hover {
+  background-color: #007bb6 !important;
+  color: #fff;
+}
+.disp_front main .widget_core_user_links .ufld_icon_links a.ufld_github:hover,
+.disp_front main .widget_core_org_members .ufld_icon_links a.ufld_github:hover {
+  background-color: #333333 !important;
+  color: #fff;
+}
+.disp_front main .widget_core_coll_search_form .compact_search_form .search_field {
+  font-size: 16px;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.disp_front main .widget_core_coll_search_form .compact_search_form .search_submit {
+  display: none;
+}
+.disp_front main .widget_plugin_evo_Calr .bCalendarTable .bCalendarRow th {
+  padding: 8px;
+}
+.disp_front main .widget_plugin_evo_Calr .bCalendarTable td {
+  padding: 8px;
 }
 .results .fieldset_title {
   padding-bottom: 15px;
@@ -1255,12 +1372,18 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
   display: inline-block;
   margin: 22px;
 }
+.disp_mediaidx .mediaidx-item--wrapper .mediaidx-item img {
+  width: 100%;
+  height: auto;
+}
 .disp_404 h2,
-.disp_postidx main h2 {
+.disp_postidx h2,
+.disp_catdir main h2 {
   margin-bottom: 30px;
 }
 .disp_404 p,
-.disp_postidx main p {
+.disp_postidx p,
+.disp_catdir main p {
   font-size: 16px;
 }
 .disp_search .widget_core_coll_search_form .extended_search_form {
@@ -1388,6 +1511,11 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
   transition: all 0.3s ease-in-out;
   border-radius: 3px;
 }
+.disp_threads.detail_msgform main .comment-form .control-buttons input {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  padding: 12px 15px;
+}
 @media (min-width: 768px) {
   .evo_post .evo_post__full .evo_post__full_text .videoblock,
   .evo_intro_post .evo_post__full .evo_post__full_text .videoblock,
@@ -1439,6 +1567,12 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
     margin-left: 0px;
   }
 }
+@media (max-width: 615px) {
+  .disp_mediaidx .mediaidx-item--wrapper .mediaidx-item img {
+    width: 100%;
+    height: auto;
+  }
+}
 @media (max-width: 768px) {
   .evo_post .evo_post__full .evo_post__full_text .videoblock iframe,
   .evo_intro_post .evo_post__full .evo_post__full_text .videoblock iframe,
@@ -1448,6 +1582,12 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
   }
   .disp_mediaidx .mediaidx-item--wrapper .mediaidx-item {
     margin: 10px 0px;
+    display: block;
+  }
+  .disp_msgform.anonymous .form-group {
+    width: 100%;
+  }
+  .disp_msgform.anonymous .controls input {
     display: block;
   }
 }
@@ -1466,34 +1606,6 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
   }
 }
 @media (max-width: 1199px) {
-  .navbar-header .ufld_icon_links {
-    width: 54px;
-  }
-  .navbar-header .ufld_icon_links:before {
-    font-family: FontAwesome;
-    display: inline-block;
-    content: '\f1e0';
-    font-size: 18px;
-    height: 54px;
-    width: 54px !important;
-    line-height: 54px;
-    -webkit-transition-duration: 0.1s;
-    transition-duration: 0.1s;
-    -webkit-transition-timing-function: ease-in-out;
-    transition-timing-function: ease-in-out;
-  }
-  .navbar-header .ufld_icon_links:hover:before {
-    cursor: pointer;
-    color: #fff;
-  }
-  .navbar-header .ufld_icon_links a {
-    display: none;
-    z-index: 1009;
-  }
-  .navbar-header .ufld_icon_links a.drop-down-social {
-    display: block;
-    width: 55px;
-  }
   .evo_post_title h2 {
     font-size: 26px;
   }
