--- a/style.less
+++ b/style.less
@@ -74,8 +74,10 @@ div.control input:focus  {
 	min-height: 55px;
 	margin-bottom: 0px;
 	border-top: none !important;
+	border-radius: 0;
 	.navbar-collapse {
 		padding: 0;
+		overflow: hidden;
 	}
 }
 .navbar-nav.evo_container__menu {
@@ -108,6 +110,7 @@ div.control input:focus  {
 				border: 0 !important;
 				margin: 0 15px 0 0 !important;
 				letter-spacing: -0.15px;
+				line-height: 35px;
 				font-size: 14px;
 				padding: 20px 0;
 				text-transform: uppercase;
@@ -116,7 +119,7 @@ div.control input:focus  {
 		}
 	}
 	.navbar-toggle-hamb {
-		padding: 21px 16px;
+		padding: 20px 16px;
 		margin: 0;
 		border-top: 0; border-right: 0; border-bottom: 0;
 		border-radius: 0;
@@ -165,6 +168,37 @@ div.control input:focus  {
 		}
 	}
 }
+
+	.navbar-header, .evo_container__menu {
+		.ufld_icon_links {
+			width: 54px;
+			&:before {
+				font-family: FontAwesome;
+				display: inline-block;
+				content: '\f1e0';
+				font-size: 18px;
+				height: 54px;
+				width: 54px !important;
+				line-height: 54px;
+				
+					.transition-0.1s;
+					-webkit-transition-timing-function: ease-in-out;
+					transition-timing-function: ease-in-out;
+			}
+			&:hover:before {
+				cursor: pointer;
+				color: #fff;
+			}
+			a {
+				display: none;
+				&.drop-down-social {
+					display: block;
+					width: 55px;
+				}
+				z-index: 1009;
+			}
+		}
+	}
 	
 // Header search section toggler
 .header-search-toggle {
@@ -172,6 +206,8 @@ div.control input:focus  {
 	right: 0;
 	padding: 0;
 	margin: 0;
+	border-radius: 0;
+	border-top: 0; border-bottom: 0;
 	i {
 		padding: 20px;
 
@@ -193,6 +229,16 @@ div.control input:focus  {
 .header-social-toggle {
 	padding: 0;
 	margin: 0;
+	border-radius: 0;
+	border-top: none; border-right: none; border-bottom: 0;
+	.ufld_icon_links a:first-child {
+		margin-top: 1px;
+	}
+}
+.menu-social-toggle {
+	.ufld_icon_links a:first-child {
+		margin-top: 1px;
+	}
 }
 
 // Top Search Field Layout
@@ -206,7 +252,7 @@ div.control input:focus  {
 	-moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10);
 	box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, 0.10);
 	
-	.search_field {
+	div.compact_search_form input.search_field {
 		height: 100%;
 		font-size: 46px;
 		text-align: center;
@@ -611,24 +657,32 @@ textarea.message_text {
 }
 
 // Masonry Posts layout
-.disp_posts .grid-item {
-	&.two-cols, &.three-cols {
-		padding: 0 15px;
-		article {
-			margin-bottom: 15px;
-			.evo_post_masonry h2 a {
-				font-size: 20px;
-				font-weight: 700;
-			}
-			.evo_post__info {
-				padding-bottom: 15px;
-			}
-			.evo_image_block {
-				margin-bottom: 15px;
-			}
-			.evo_post__full_text {
-				font-size: 15px;
-				letter-spacing: 0.2px;
+.disp_posts {
+	.grid {
+		margin-bottom: 4em;
+		.grid-item {
+			&.two-cols, &.three-cols {
+				padding: 0 15px;
+				article {
+					margin-bottom: 45px;
+					.evo_post_masonry h2 {
+						margin-top: 5px;
+						a {
+							font-size: 20px;
+							font-weight: 700;
+						}
+					}
+					.evo_post__info {
+						padding-bottom: 15px;
+					}
+					.evo_image_block {
+						margin-bottom: 15px;
+					}
+					.evo_post__full_text {
+						font-size: 15px;
+						letter-spacing: 0.2px;
+					}
+				}
 			}
 		}
 	}
@@ -677,6 +731,7 @@ textarea.message_text {
 
 .evo_comment {
 	margin-left: 59px;
+	background: transparent;
 	.evo_comment_title {
 		padding: 15px 15px 0px;
 		a:hover {
@@ -991,8 +1046,8 @@ div.bSideItem {
 			border-radius: 4px;
 			font-size: 13px;
 			padding: 10px 16px;
-			margin-right: 5px;
-			margin-bottom: 5px;
+			margin-right: 4px;
+			margin-bottom: 4px;
 	}
 }
 
@@ -1169,14 +1224,6 @@ main {
 	}
 }
 
-// Avatar widget
-div.widget_core_coll_avatar {
-	text-align: left;
-	img {
-		border-radius: 50%;
-	}
-}
-
 // Calendar widget
 .widget_plugin_evo_Calr .bCalendarTable {
 	caption {
@@ -1224,14 +1271,26 @@ div.widget_core_coll_avatar {
 			font-size: 14px;
 		}
 	}
+	
+	// XML Feeds widget in sidebar
 	.widget_core_coll_xml_feeds div.notes {
 		a {
 			font-size: 14px;
 		}
 	}
+	
+	// Calendar widget in sidebar
 	.widget_plugin_evo_Calr {
 		table {
 			width: 100%;
+		}
+	}
+	
+	// Avatar widget
+	div.widget_core_coll_avatar {
+		text-align: left;
+		img {
+			border-radius: 50%;
 		}
 	}
 }
@@ -1257,8 +1316,78 @@ p.tag_cloud a {
 	}
 }
 
+// User avatars widget
+.widget_core_user_avatars .widget_flow_blocks img {
+	border-radius: 0;
+}
 
 
+
+
+// ****************************************************************************
+// Disp front
+// ****************************************************************************
+.disp_front main {
+	// Social links
+	.widget_core_user_links, .widget_core_org_members {
+	.ufld_icon_links a {
+		border-radius: 0;
+		color: #fff;
+		height: 50px;
+		width: 50px;
+		&:hover {
+			border-radius: 0;
+		}
+		span {
+			line-height: 50px;
+		}
+		&.ufld_twitter:hover {
+			background-color: #00aced !important;
+			color: #fff;
+		}
+		&.ufld_facebook:hover {
+			background-color: #3b5998 !important;
+			color: #fff;
+		}
+		&.ufld_googleplus:hover {
+			background-color: #dd4b39 !important;
+			color: #fff;
+		}
+		&.ufld_linkedin:hover {
+			background-color: #007bb6 !important;
+			color: #fff;
+		}
+		&.ufld_github:hover {
+			background-color: #333333 !important;
+			color: #fff;
+		}
+	}
+	}
+	
+	// Search form
+	.widget_core_coll_search_form .compact_search_form {
+		.search_field {
+			font-size: 16px;
+			text-align: center;
+			padding-left: 15px;
+			padding-right: 15px;
+		}
+		.search_submit {
+			display: none;
+		}
+	}
+	
+	.widget_plugin_evo_Calr .bCalendarTable {
+		.bCalendarRow {
+			th {
+				padding: 8px;
+			}
+		}
+		td {
+			padding: 8px;
+		}
+	}
+}
 
 // ****************************************************************************
 // Disp users module
@@ -1312,9 +1441,9 @@ p.tag_cloud a {
 
 
 // ****************************************************************************
-// Disp error 404 & Disp postidx
+// Disp error 404 & Disp postidx, Dips catdir
 // ****************************************************************************
-.disp_404, .disp_postidx
+.disp_404, .disp_postidx, .disp_catdir
 main {
 	h2 {
 		margin-bottom: 30px;
@@ -1404,6 +1533,8 @@ main {
 	}
 }
 
+
+
 // ****************************************************************************
 // Disp msgform
 // ****************************************************************************
@@ -1419,19 +1550,25 @@ main {
 			}
 		}
 
-			.form-group {
-				float: none;
-				display: block;
-				width: 100%;
-				
-				.controls {
-					input.submit {
-						-webkit-transition: all 0.3s ease-in-out;
-						transition: all 0.3s ease-in-out;
-						border-radius: 3px;
-					}
+		.form-group {
+			float: none;
+			display: block;
+			width: 100%;
+	
+			.controls {
+				input.submit {
+					-webkit-transition: all 0.3s ease-in-out;
+					transition: all 0.3s ease-in-out;
+					border-radius: 3px;
 				}
 			}
+		}
+		
+		.control-buttons input {
+			-webkit-transition: all 0.3s ease-in-out;
+			transition: all 0.3s ease-in-out;
+			padding: 12px 15px;
+		}
 
 	}
 }
