--- a/style.less
+++ b/style.less
@@ -169,36 +169,42 @@ div.control input:focus  {
 	}
 }
 
-	.navbar-header, .evo_container__menu {
-		.ufld_icon_links {
-			width: 54px;
-			&:before {
-				font-family: FontAwesome;
-				display: inline-block;
-				content: '\f1e0';
-				font-size: 18px;
-				height: 54px;
-				width: 54px !important;
-				line-height: 54px;
-				
-					.transition-0.1s;
-					-webkit-transition-timing-function: ease-in-out;
-					transition-timing-function: ease-in-out;
+.navbar-header, .evo_container__menu {
+	.ufld_icon_links {
+		width: 54px;
+		&:before {
+			font-family: FontAwesome;
+			display: inline-block;
+			content: '\f1e0';
+			font-size: 18px;
+			height: 54px;
+			width: 54px !important;
+			line-height: 54px;
+			
+				.transition-0.1s;
+				-webkit-transition-timing-function: ease-in-out;
+				transition-timing-function: ease-in-out;
+		}
+		&:hover:before {
+			cursor: pointer;
+			color: #fff;
+		}
+		a {
+			display: none;
+			&.drop-down-social {
+				display: block;
+				width: 55px;
 			}
-			&:hover:before {
-				cursor: pointer;
-				color: #fff;
-			}
-			a {
-				display: none;
-				&.drop-down-social {
-					display: block;
-					width: 55px;
-				}
-				z-index: 1009;
-			}
+			z-index: 1009;
 		}
 	}
+}
+
+// If enabled, logo layout
+.navbar-header .navbar-logo {
+	height: 54px;
+	padding: 0 10px 0 15px;
+}
 	
 // Header search section toggler
 .header-search-toggle {
@@ -690,6 +696,7 @@ textarea.message_text {
 
 // Special Cover Image position disp=single
 .disp_single .spec_cover_image__header {
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.77);
 	padding: 15% 15px 0;
 	display: table-cell;
 	vertical-align: middle;
@@ -704,7 +711,7 @@ textarea.message_text {
 // Disp single navigation
 .pager.special_pager_layout {
 	margin: 0 0 30px;
-	li a {
+sxcz	li a {
 		border-radius: 0;
 		padding: 12px 14px;
 		.transition-0.1s;
@@ -718,6 +725,12 @@ textarea.message_text {
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
+
+// Disp single add comments feed when logged out
+.disp_single.anonymous .evo_post_feedback_feed_msg {
+	margin-top: 80px;
+}
+
 
 
 
